--- a/src/main/webapp/WEB-INF/message/messages.properties
+++ b/src/main/webapp/WEB-INF/message/messages.properties
@@ -32,3 +32,9 @@ NotNull.releaseBacklogBean.productId=Please enter product name
 NotEmpty.releaseBacklogBean.type=Please enter release backlog type
 NotNull.releaseBacklogBean.scrumMasterId=Please enter scrum master name
 
+NotEmpty.sprintBean.name=Please enter sprint name
+NotNull.sprintBean.startDate=Please enter Start Date
+DateTimeFormat.sprintBean.startDate=Please enter Start format as yyyy-mm-dd
+NotNull.sprintBean.dueDate=Please enter Due Date
+DateTimeFormat.sprintBean.dueDate=Please enter Start format as yyyy-mm-dd
+ 
