Product owner use case completion with simple exception handling.

--- a/src/main/webapp/WEB-INF/message/messages.properties
+++ b/src/main/webapp/WEB-INF/message/messages.properties
@@ -25,9 +25,9 @@ Column.productBean.statusId=Please enter status
 
 NotEmpty.releaseBacklogBean.name=Please enter release backlog name
 NotNull.releaseBacklogBean.startDate=Please enter start date
-DateTimeFormat.productBean.startDate=Please enter start format as yyyy-mm-dd
-NotNull.releaseBacklogBean.dueDate=Please enter start date
-DateTimeFormat.releaseBacklogBean.dueDate=Please enter start format as yyyy-mm-dd
+DateTimeFormat.productBean.startDate=Please enter start date format as yyyy-mm-dd
+NotNull.releaseBacklogBean.dueDate=Please enter due date
+DateTimeFormat.releaseBacklogBean.dueDate=Please enter due date format as yyyy-mm-dd
 NotNull.releaseBacklogBean.productId=Please enter product name
 NotEmpty.releaseBacklogBean.type=Please enter release backlog type
 NotNull.releaseBacklogBean.scrumMasterId=Please enter scrum master name
