Finalize style and validation

--- a/src/main/webapp/WEB-INF/message/messages.properties
+++ b/src/main/webapp/WEB-INF/message/messages.properties
@@ -37,4 +37,8 @@ NotNull.sprintBean.startDate=Please enter Start Date
 DateTimeFormat.sprintBean.startDate=Please enter Start format as yyyy-mm-dd
 NotNull.sprintBean.dueDate=Please enter Due Date
 DateTimeFormat.sprintBean.dueDate=Please enter Start format as yyyy-mm-dd
- 
+
+NotNull.worklogBean.actualEffort = Actual Effort cannot be null. 
+NotNull.worklogBean.modifiedDate = Modified Date cannot be null. 
+NotNull.worklogBean.effortType = Effort Type cannot be null. 
+DateTimeFormat.worklogBean.modifiedDate = Wrong Date format. It should be yyyy-mm-dd.
