--- a/src/main/webapp/WEB-INF/message/messages.properties
+++ b/src/main/webapp/WEB-INF/message/messages.properties
@@ -42,3 +42,13 @@ NotNull.worklogBean.actualEffort = Actual Effort cannot be null.
 NotNull.worklogBean.modifiedDate = Modified Date cannot be null. 
 NotNull.worklogBean.effortType = Effort Type cannot be null. 
 DateTimeFormat.worklogBean.modifiedDate = Wrong Date format. It should be yyyy-mm-dd.
+
+NotNull.userStoryBeanForDevTest.estimateDevEffort = Estimated Development Effort cannot be null.
+NotNull.userStoryBeanForDevTest.estimateTestEffort = Estimated Test Effort cannot be null.
+NotNull.userStoryBeanForDevTest.startDate = Start Date cannot be null.
+NotNull.userStoryBeanForDevTest.duetDate = Due Date cannot be null.
+
+Range.userStoryBeanForDevTest.estimateDevEffort = Estimated Development Effort must be greater than or equal 0.
+Range.userStoryBeanForDevTest.estimateTestEffort = Estimated Test Effort must be greater than or equal 0.
+DateTimeFormat.userStoryBeanForDevTest.startDate = Wrong Date format. It should be yyyy-mm-dd.
+DateTimeFormat.userStoryBeanForDevTest.duetDate = Wrong Date format. It should be yyyy-mm-dd.
