hari done with his use case

--- a/src/main/webapp/WEB-INF/message/messages.properties
+++ b/src/main/webapp/WEB-INF/message/messages.properties
@@ -52,3 +52,13 @@ Range.userStoryBeanForDevTest.estimateDevEffort = Estimated Development Effort m
 Range.userStoryBeanForDevTest.estimateTestEffort = Estimated Test Effort must be greater than or equal 0.
 DateTimeFormat.userStoryBeanForDevTest.startDate = Wrong Date format. It should be yyyy-mm-dd.
 DateTimeFormat.userStoryBeanForDevTest.duetDate = Wrong Date format. It should be yyyy-mm-dd.
+
+NotNull.employeeBean.firstname = firstname cannot be null.
+NotNull.employeeBean.lastname = lastname cannot be null.
+NotNull.employeeBean.username = username cannot be null.
+NotNull.employeeBean.password = password cannot be null.
+NotNull.employeeBean.status = status cannot be null.
+NotNull.employeeBean.roleId =roleId cannot be null.
+
+
+
