--- a/src/main/webapp/WEB-INF/message/messages.properties
+++ b/src/main/webapp/WEB-INF/message/messages.properties
@@ -46,7 +46,7 @@ DateTimeFormat.worklogBean.modifiedDate = Wrong Date format. It should be yyyy-m
 NotNull.userStoryBeanForDevTest.estimateDevEffort = Estimated Development Effort cannot be null.
 NotNull.userStoryBeanForDevTest.estimateTestEffort = Estimated Test Effort cannot be null.
 NotNull.userStoryBeanForDevTest.startDate = Start Date cannot be null.
-NotNull.userStoryBeanForDevTest.duetDate = Due Date cannot be null.
+NotNull.userStoryBeanForDevTest.dueDate = Due Date cannot be null.
 
 Range.userStoryBeanForDevTest.estimateDevEffort = Estimated Development Effort must be greater than or equal 0.
 Range.userStoryBeanForDevTest.estimateTestEffort = Estimated Test Effort must be greater than or equal 0.
